syntax = "proto3";

package {{cookiecutter.grpc_package}};

option go_package = "{{cookiecutter.source_path}}/{{cookiecutter.app_name}}/proto;{{cookiecutter.app_name|lower|replace('.', '_')}}";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://{{cookiecutter.source_path}}/{{cookiecutter.app_name}}";
    description: "{{cookiecutter.app_name}} repository";
  }
  schemes: HTTP;
  schemes: HTTPS;
};

message EchoRequest{
  string msg = 1;
}
message EchoResponse{
  string msg = 1;
}

service {{cookiecutter.service_name}} {
  //LivenessProbe for the service
  rpc HealthCheck(google.protobuf.Empty) returns (google.api.HttpBody) {
      option (google.api.http) = {
          get: "/healthcheck"
      };
  }

  //ReadinessProbe for the service
  rpc ReadyCheck(google.protobuf.Empty) returns (google.api.HttpBody) {
      option (google.api.http) = {
          get: "/readycheck"
      };
  }


  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/api/v1/example/echo"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Echo endpoint"
      description: "Provides an echo reply endpoint."
      tags: "echo"
    };
  }

  rpc Error(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/api/v1/example/error"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Error endpoint"
      description: "Request made to this endpoint result in errors."
      tags: "error"
    };
  }
}
